# USBDeviceInteractionsSimulator

./: CMakeLists.txt  LICENSE  README.md  USBDeviceInteractions.vcxproj  USBDeviceInteractions.vcxproj.filters  USBDeviceInteractionsSimulator.cpp  USBDeviceInteractionsSimulator.sln  USBDeviceReader.cpp  USBDeviceReader.h  USBDeviceReaderTests.cpp  data.txt  data_generator.py
.github/workflows/: ci.yml
